always something TODO

--- a/branches/11.0.2/TODO
+++ b/branches/11.0.2/TODO
@@ -1,5 +1,8 @@
 * Bugs:
 ** M-?: following a variable allocation with `='
+
+rework ansys-skeleton and documentation   
+
 * Interesting stuff   
 ** *repeate command
    
