--- a/branches/11.0.2/TODO
+++ b/branches/11.0.2/TODO
@@ -11,7 +11,7 @@
 ** *repeate command
    
 * improve ansys-kill-buffer-query-function
-  is it possible to quit Anys in an orderly fashion?
+  is it possible to quit Ansys in an orderly fashion?
   what happens with the asynchronous process?
 
 ** This is osolete/redundant with Emacs 23.2:
@@ -22,32 +22,35 @@
  setting the appropriate process flag with `set-process-query-on-exit-flag'.
 
 * improve Ansys interpreter buffer with `comint-mode'
-   gnuplot-mode
-- C-c C-c does not work for large regions!
-- ansys process status is not working properly process-sentinel?
+   example: gnuplot-mode
+- Complete ansys-send-or-copy-above
+- substring-no-properties
+- C-c C-c currently does not work for large regions: check this!
+- Provide Ansys command completion in comint buffer
+- Ansys process status is not working properly process-sentinel or some comint-hook?
 - pick up ansys-process when renaming buffer file and restarting
   ansys-mode, otherwise process is without buffer
-- warn when abandoning macro file with an associated Ansys process.
-- C-c C-c shouldn't send empty lines in regions, especially at the
-  end, to the solver.  Use a filter?
+- warn when abandoning macro file with an associated Ansys process,
+  this should be redundant with Emacs 23.
 - provide Ansys `y' request and carriage return? superflouous?
 - indicate with activation/inactivation of menu items that an
   asynchronous job is already running or not.
 - check for EXIT command and wait some time to update the mode line
-  run status correctly
+  run status correctly 
 - For non-comint-mode usage: display .log file with tail mode
-- show sent lines in apdl file C-c C-u, C-c C-c,
--- with fringes
--- with background colour
--- maximum line
--- reset highlighting, when?
+- show/mark sent lines in apdl file C-c C-u, C-c C-c,
+  o with fringes
+  o with background
+  o maximum line
+  o reset highlighting, when?
+- C-c C-c shouldn't send empty lines in regions, especially at the
+  end, to the solver.  Use a filter?
 
 * Dissect skeleton into smaller more useful subjects   
 - spider beams, _bolt.mac, screw.mac
-- sort skeletons in menu
-- preview skeletons! smaller ones in mini buffer
 - optional setting of (Ansys-mode-)bookmarks?   
 - rework concept with respect to the Ansys menu structure
+  sort skeletons in menu
 - Make skeleton-header properly working (info "(autotype)")
 - Optimise templates: completing-read, read-from-minibuffer abbrev `d
   does not indent properly in another block level Implement choice when
@@ -62,18 +65,13 @@
   *go/*if label is not fontified at the command line (restriction of 7 characters with out the colon.)
    must *go:label be unambiguous?
 
-
 * *set strings may be only 32 character long!
+* correct *set assignment printout
 * trigger timer when showing the ansys-comand-parametr-help
 * add cmblock and cm assignments to the variable list
 
-* correct *set assignment printout
-
 * take care of setup procedure: v110/ansys/apdl/start110.ans
   /MPLIB,READ,/ansys_inc/v110/ansys/matlib
-
-* Complete ansys-send-or-copy-above
-- substring-no-properties
 
 * C-c C-v show (optionally) only variables defined up to current cursor line
 
@@ -93,7 +91,6 @@ commands into their help strings of parameter help.
 - mode-line-format nil);no mode line for this buffer Unambiguous
   Ansys commands with additional characters at the end are not found
   in the parameter help (C-c C-h) example: *VWROOOO
-
 
 ------------------------------
 dry run: Emacs 22.1 -Q testing: padt.mac /*commands and default
